--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <h1>This is my Github Pgaes website! </h1>
+        <h1>This is my Github Pages website! </h1>
     </body>
 </html>
